tests/sumo/errors/routes/disconnected_off/errors.sumo.meso
Warning: Teleporting vehicle '0'; waited too long, from edge 'beg':4 to edge 'end':1, time=318.99.
